font size fixed and spacing for sponsors on phone screen

--- a/wimbledon-sporting-club/src/App.scss
+++ b/wimbledon-sporting-club/src/App.scss
@@ -78,12 +78,9 @@ a {
 
 
 /* Hamburger Menu Styling */
-.navbar {
-  justify-content: flex-start;
-}
+
 .burger-menu {
   margin-left: 5px;
-
   cursor: pointer;
   display: none;
   flex-direction: column;
@@ -96,58 +93,7 @@ a {
   margin: 4px 0;
 }
 
-/* Media Query for Small Screens */
-@media only screen and (max-width: 768px) {
-  .burger-menu {
-    display: flex;
-     transform: translateX(0);
-     cursor: pointer;
-  }
 
-  .nav-links {
-    display: none;
-  }
-#nav-logo {
-  display: none;
-}
-  .navbar.show-menu .nav-links {
-    display: none;
-  }
-
-  .navbar.show-menu .nav-links.show-dropdown {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    background-color: $primary-color;
-    top: 30px; /* Adjust as needed */
-    left: 0;
-    width: 100%;
-  }
-
-  .navbar.show-menu .nav-links.show-dropdown li {
-    margin-right: 0;
-    margin-bottom: 10px;
-    text-align: center;
-  }
-.banner2 {
-  flex-direction: column;
-}
-.banner {
-  overflow: hidden
-};
-
-  .footer {
-    transform: translateX(13%);
-    flex-direction: column;
-    text-align: end;
-  }
-  .footer-p {
-    margin: 20px 0px;
-}
-#insta {
-  transform: translateX(50%);
-}
-}
 
 .container {
   margin: 20px 0px;
@@ -384,4 +330,68 @@ th {
 
   #footer-logo {
     width: 100%;
+  }
+
+  /* Media Query for Small Screens */
+
+  @media only screen and (max-width: 768px) {
+    .navbar {
+      justify-content: flex-start;
+    }
+    .burger-menu {
+      display: flex;
+       transform: translateX(0);
+       cursor: pointer;
+    }
+  
+    .nav-links {
+      display: none;
+    }
+  #nav-logo {
+    display: none;
+  }
+    .navbar.show-menu .nav-links {
+      display: none;
+    }
+  
+    .navbar.show-menu .nav-links.show-dropdown {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      background-color: $primary-color;
+      top: 30px; /* Adjust as needed */
+      left: 0;
+      width: 100%;
+    }
+  
+    .navbar.show-menu .nav-links.show-dropdown li {
+      margin-right: 0;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+  .banner2 {
+    flex-direction: column;
+  }
+  .banner {
+    overflow: hidden
+  };
+  #banner-text {
+    font-size: 1rem;
+    margin: 5px 15px;
+  }
+
+  .sponsors {
+    width: 19%;
+  }
+    .footer {
+      transform: translateX(13%);
+      flex-direction: column;
+      text-align: end;
+    }
+    .footer-p {
+      margin: 20px 0px;
+  }
+  #insta {
+    transform: translateX(50%);
+  }
   }
